--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+Cartopy==0.24.1
+certifi==2025.1.31
 contourpy==1.3.1
 cycler==0.12.1
 fonttools==4.57.0
@@ -5,7 +7,13 @@ kiwisolver==1.4.8
 matplotlib==3.10.1
 numpy==2.2.4
 packaging==24.2
+pandas==2.2.3
 pillow==11.1.0
 pyparsing==3.2.3
+pyproj==3.7.1
+pyshp==2.3.1
 python-dateutil==2.9.0.post0
+pytz==2025.2
+shapely==2.1.0
 six==1.17.0
+tzdata==2025.2
